[gd_scene load_steps=3 format=3 uid="uid://c4e7f6lnbfwep"]

[ext_resource type="Script" uid="uid://claqxxdseq0hn" path="res://HUD.gd" id="1_efote"]
[ext_resource type="FontFile" uid="uid://dsslxgebcrnhe" path="res://fonts/Xolonium-Regular.ttf" id="2_vow1y"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_efote")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 64

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -79.5
offset_right = 140.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 64
text = "Devour all"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -410.0
offset_right = 100.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Start"

[node name="LeaderboardButton" type="Button" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 375.0
offset_bottom = 105.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 48
text = "Leaderboard"

[node name="NameInput" type="LineEdit" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -420.0
offset_right = 200.0
offset_bottom = -370.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter your name"
alignment = 1

[node name="SubmitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -350.0
offset_right = 137.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 32
text = "Submit Score"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_right = -20.0
offset_bottom = 78.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 32
text = "Time: 0"
horizontal_alignment = 2

[node name="PauseButton" type="Button" parent="."]
offset_left = 26.0
offset_top = 29.0
offset_right = 176.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 32
text = "Pause"

[node name="RestartButton" type="Button" parent="."]
offset_left = 201.0
offset_top = 29.0
offset_right = 351.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="Heart1" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 48
text = "♥"
horizontal_alignment = 1

[node name="Heart2" type="Label" parent="."]
offset_left = 70.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 48
text = "♥"
horizontal_alignment = 1

[node name="Heart3" type="Label" parent="."]
offset_left = 120.0
offset_top = 20.0
offset_right = 170.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 48
text = "♥"
horizontal_alignment = 1

[node name="AttackLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 24
text = "Attack Ready (Space)"
horizontal_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="text_submitted" from="NameInput" to="." method="_on_name_input_text_submitted"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
